Updating the notebook with observations

--- a/HeroesOfPymoli/HeroesOfPymoli_js.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_js.ipynb
@@ -5,9 +5,11 @@
    "metadata": {},
    "source": [
     "### Heroes Of Pymoli Data Analysis\n",
-    "* Of the 1163 active players, the vast majority are male (84%). There also exists, a smaller, but notable proportion of female players (14%).\n",
+    "* The lowest age group (<10 years old) is the second highest spending and spends about 20% more on average than the next oldest group.\n",
     "\n",
-    "* Our peak age demographic falls between 20-24 (44.8%) with secondary groups falling between 15-19 (18.60%) and 25-29 (13.4%).  \n",
+    "* Females, who only make up about 14% of the population, spend more on average then the males. It could be more profitable to try and attract more female players\n",
+    "\n",
+    "* The majority of the most popular items are also the most profitable.\n",
     "-----"
    ]
   },
